Implement responsive Home section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
   <!--  CSS-->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./assets/css/styles.css">
 
   <title>Tasty Food</title>
 </head>
@@ -42,7 +42,23 @@
   </nav>
 </header>
 
-<script src="script.js"></script>
+
+<main>
+  <!--  Home-->
+  <section class="home" id="home">
+    <div class="container">
+      <div>
+        <h1>Tasty food</h1>
+        <h2>Try the best <br> food of the week.</h2>
+        <button class="btn"><a href="#menu">View Menu</a></button>
+      </div>
+
+      <img src="assets/img/home.png" alt="" class="home__img">
+    </div>
+  </section>
+</main>
+
+<script src="./assets/js/script.js"></script>
 
 </body>
 </html>
