Implement Responsive About section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
         <button class="btn"><a href="#menu">View Menu</a></button>
       </div>
 
-      <img src="assets/img/home.png" alt="" class="home__img">
+      <img src="assets/img/home.png" alt="Salad" width="724" height="733">
+    </div>
+  </section>
+
+  <!--  About-->
+  <section class="about" id="about">
+    <div class="container">
+      <div>
+        <span>About us</span>
+        <h2>We cook the best tasty food.</h2>
+        <p>We cook the best food in the entire city, with excellent customer service, the best meals and at the best price, visit us.</p>
+        <button class="btn"><a href="#">Explore history</a></button>
+      </div>
+
+      <img src="assets/img/about.jpg" alt="Vegetables" width="800" height="800">
     </div>
   </section>
 </main>
