Implement Responsive Menu section

--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
     <div>
 
       <ul class="nav-menu">
-        <li class="nav-item"><a href="#home">Home</a></li>
-        <li class="nav-item"><a href="#about">About</a></li>
-        <li class="nav-item"><a href="#services">Services</a></li>
-        <li class="nav-item"><a href="#menu">Menu</a></li>
-        <li class="nav-item"><a href="#contact">Contact us</a></li>
+        <li class="nav-item">
+          <a href="#home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#services">Services</a>
+        </li>
+        <li class="nav-item">
+          <a href="#menu">Menu</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contact">Contact us</a>
+        </li>
 
         <li><i class="bx bx-moon theme-icon"></i></li>
       </ul>
@@ -50,7 +60,9 @@
       <div>
         <h1>Tasty food</h1>
         <h2>Try the best <br> food of the week.</h2>
-        <button class="btn"><a href="#menu">View Menu</a></button>
+        <button class="btn">
+          <a href="#menu">View Menu</a>
+        </button>
       </div>
 
       <img src="assets/img/home.png" alt="Salad" width="724" height="733">
@@ -64,7 +76,9 @@
         <span>About us</span>
         <h2>We cook the best tasty food.</h2>
         <p>We cook the best food in the entire city, with excellent customer service, the best meals and at the best price, visit us.</p>
-        <button class="btn"><a href="#">Explore history</a></button>
+        <button class="btn">
+          <a href="#">Explore history</a>
+        </button>
       </div>
 
       <img src="assets/img/about.jpg" alt="Vegetables" width="800" height="800">
@@ -355,6 +369,76 @@
           </svg>
           <h3>Delivery</h3>
           <p>We offer our clients excellent quality services for many years, with the best and delicious food in the city.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--  Menu-->
+  <section class="menu" id="menu">
+    <div class="container">
+      <span>Special</span>
+      <h2>Menu of the week</h2>
+
+      <div class="menu-container">
+        <div class="menu-card">
+          <img src="assets/img/plate1.png" alt="Barbecue salad">
+          <h3>Barbecue salad</h3>
+          <p>Delicious dish</p>
+          <span>$22.00</span>
+          <button class="btn">
+            <i class='bx bx-cart-alt'></i>
+          </button>
+        </div>
+
+        <div class="menu-card">
+          <img src="assets/img/plate2.png" alt="Salad with fish">
+          <h3>Salad with fish</h3>
+          <p>Delicious dish</p>
+          <span>$12.00</span>
+          <button class="btn">
+            <i class='bx bx-cart-alt'></i>
+          </button>
+        </div>
+
+        <div class="menu-card">
+          <img src="assets/img/plate3.png" alt="Spinach salad">
+          <h3>Spinach salad</h3>
+          <p>Delicious dish</p>
+          <span>$9.50</span>
+          <button class="btn">
+            <i class='bx bx-cart-alt'></i>
+          </button>
+        </div>
+
+        <div class="menu-card">
+          <img src="assets/img/plate4.png" alt="Chicken wings">
+          <h3>Chicken wings</h3>
+          <p>Delicious dish</p>
+          <span>$25.00</span>
+          <button class="btn">
+            <i class='bx bx-cart-alt'></i>
+          </button>
+        </div>
+
+        <div class="menu-card">
+          <img src="assets/img/plate5.png" alt="Spaghetti">
+          <h3>Spaghetti</h3>
+          <p>Delicious dish</p>
+          <span>$18.50</span>
+          <button class="btn">
+            <i class='bx bx-cart-alt'></i>
+          </button>
+        </div>
+
+        <div class="menu-card">
+          <img src="assets/img/plate6.png" alt="Fishy salad">
+          <h3>Fishy salad</h3>
+          <p>Delicious dish</p>
+          <span>$13.00</span>
+          <button class="btn">
+            <i class='bx bx-cart-alt'></i>
+          </button>
         </div>
       </div>
     </div>
