--- a/index.html
+++ b/index.html
@@ -443,6 +443,21 @@
       </div>
     </div>
   </section>
+
+  <!--  Contact Us-->
+  <section class="contact" id="contact">
+    <div class="container">
+      <div class="contact-data">
+        <span>Let's talk</span>
+        <h2>Contact us</h2>
+        <p>If you want to reserve a table in our restaurant, contact us and we will attend you quickly, with our 24/7 chat service.</p>
+      </div>
+
+      <div>
+        <button class="btn"><a href="#">Contact us now</a></button>
+      </div>
+    </div>
+  </section>
 </main>
 
 <script src="./assets/js/script.js"></script>
