Implement Responsive Footer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </button>
       </div>
 
-      <img src="assets/img/home.png" alt="Salad" width="724" height="733">
+      <img src="assets/img/home.png" alt="Salad" width="792" height="798">
     </div>
   </section>
 
@@ -454,11 +454,85 @@
       </div>
 
       <div>
-        <button class="btn"><a href="#">Contact us now</a></button>
+        <button class="btn">
+          <a href="#">Contact us now</a>
+        </button>
       </div>
     </div>
   </section>
 </main>
+
+<!--Footer-->
+<footer class="footer">
+  <div class="container">
+    <div>
+      <a href="#" class="footer-logo">Tasty Food</a>
+      <span>Restaurant</span>
+      <div>
+        <a href="#" class="social-icon">
+          <i class='bx bxl-facebook'></i>
+        </a>
+        <a href="#" class="social-icon">
+          <i class='bx bxl-instagram'></i>
+        </a>
+        <a href="#" class="social-icon">
+          <i class='bx bxl-twitter'></i>
+        </a>
+      </div>
+    </div>
+
+    <div>
+      <h3>Services</h3>
+      <ul>
+        <li>
+          <a href="#">Delivery</a>
+        </li>
+        <li>
+          <a href="#">Pricing</a>
+        </li>
+        <li>
+          <a href="#">Fast food</a>
+        </li>
+        <li>
+          <a href="#">Reserve your spot</a>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Information</h3>
+      <ul>
+        <li>
+          <a href="#">Event</a>
+        </li>
+        <li>
+          <a href="#">Contact us</a>
+        </li>
+        <li>
+          <a href="#">Privacy policy</a>
+        </li>
+        <li>
+          <a href="#">Terms of services</a>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Address</h3>
+      <ul>
+        <li>Middle - Hell</li>
+        <li>Big Volcano #1</li>
+        <li>111 - 222 - 333</li>
+        <li>tasty@email.com</li>
+      </ul>
+    </div>
+  </div>
+
+  <p class="footer-copy">&#169; Made by
+    <a href="https://github.com/Mahim427">Mahim427</a>
+    .
+  </p>
+</footer>
 
 <script src="./assets/js/script.js"></script>
 
