Implement dark/light themes
- Add dark theme variables
- Implement theme icon functionality
- Show correct icon on each theme

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <a href="index.html" class="logo">Tasty</a>
 
     <div>
-
       <ul class="nav-menu">
         <li class="nav-item">
           <a href="#home">Home</a>
@@ -40,13 +39,12 @@
           <a href="#contact">Contact us</a>
         </li>
 
-        <li><i class="bx bx-moon theme-icon"></i></li>
+        <li><i id="theme-icon" class="bx bx-moon"></i></li>
       </ul>
 
       <div class="menu-icon">
         <i class='bx bx-menu'></i>
       </div>
-
     </div>
 
   </nav>
