--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     <div>
       <ul class="nav-menu">
         <li class="nav-item">
-          <a href="#home">Home</a>
+          <a href="#home" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#about">About</a>
+          <a href="#about" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="#services">Services</a>
+          <a href="#services" class="nav-link">Services</a>
         </li>
         <li class="nav-item">
-          <a href="#menu">Menu</a>
+          <a href="#menu" class="nav-link">Menu</a>
         </li>
         <li class="nav-item">
-          <a href="#contact">Contact us</a>
+          <a href="#contact" class="nav-link">Contact us</a>
         </li>
 
         <li><i id="theme-icon" class="bx bx-moon"></i></li>
