Add scroll-to-top button with show/hide functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 <body>
 
+<!--Scroll Top-->
+<button class="btn scroll-top" aria-label="Scroll to top">
+  <i class="bx bx-chevron-up"></i>
+</button>
+
+
 <header>
   <nav class="container">
 
@@ -460,7 +466,7 @@
   </section>
 </main>
 
-<!--Footer-->
+
 <footer class="footer">
   <div class="container">
     <div>
